# gdpad-utils

./: .gitignore  CMakeLists.txt  README.md  org.gdpad.tool.yml  vcpkg.json
include/: gdpadimages.hpp  gdpadresources.hpp  gdpadsettingsui.hpp  gdpadui.hpp  shared.hpp
include/fontawesome/: fa.h
src/: gdpadimages.cpp  gdpadresources.cpp  gdpadsettingsui.cpp  gdpadui.cpp  main.cpp
